# svswap

./: .gitignore  README.md  pyproject.toml  setup.cfg  svswap.py
