# vim: ts=4 sw=4 et

[metadata]
name = svswap
version = 1
author = A. Karl Kornel
author_email = karl@kornel.us
description = Swap Stardew Valley player and farmhand
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Internet
    Typing :: Typed

[options]
python_requires = >=3.8
test_requires =
    lxml-stubs
install_requires =
    lxml <5.0>=4.4.1
